--- a/user/templates/user/about.html
+++ b/user/templates/user/about.html
@@ -38,12 +38,21 @@
 <script type="text/javascript">
 $("#at").addClass("active");
 //Displaying total items in cart 
-cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
+if (localStorage.getItem('cat_cart') == {}) {
+    var cat_cart = {};
+} else {
+    cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
+} 
 var sum = 0;
 for (var item in cat_cart) {
     let qty = cat_cart[item][0];
     sum += qty;
 }
-document.getElementById('cart').innerHTML = sum;
+if(sum==0){
+    document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'   
+}
+else{
+    document.getElementById('cart').innerHTML = sum;
+}
 </script>
 {% endblock %}
