--- a/user/templates/user/basic.html
+++ b/user/templates/user/basic.html
@@ -98,7 +98,7 @@
                     </a></li>
                 <li><a href="/user/order" id="or">
                         <span class="icon"><i class="fas fa-shopping-cart"></i></span>
-                        <span class="title">Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
+                        <span class="title" id="ordu">Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">0</span>
                     </a></li>
                 <li><a href="/user/logout" id="lt">
                         <span class="icon"><i class="fas fa-sign-out-alt"></i></span>
