--- a/user/templates/user/search.html
+++ b/user/templates/user/search.html
@@ -74,7 +74,7 @@ body .no-padding {
                                     <span id="divpr{{i.product_id}}" class="divpr">
                                         <button id="pr{{i.product_id}}" class="btn btn-primary cart" onclick="add_cart(this)">Add to Cart</button>
                                     </span>
-                                    <a href="#"><button id="qv{{i.product_id}}" class="btn btn-primary">QuickView</button></a>
+                                    <a href="/user/productview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary">QuickView</button></a>
                                 </div>
                             </div>
                         </div>
