--- a/user/templates/user/index.html
+++ b/user/templates/user/index.html
@@ -4,12 +4,13 @@
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'user/index.css' %}" />
 <style type="text/css">
-    .button{
-        margin: 10px 6px;
-    }
-    .bb{
-        margin-left: 0px;
-    }
+.button {
+    margin: 10px 6px;
+}
+
+.bb {
+    margin-left: 0px;
+}
 </style>
 {% endblock %}
 {% block body %}
@@ -109,13 +110,13 @@
 {% block js %}
 <script>
 $("#dd").addClass("active");
-console.log("{{msg}}")
-if (localStorage.getItem('cat_cart') == null) {
-    if("{{msg}}"=="All good")
-        localStorage.cat_cart = {{cart_items|safe}};
-    else 
-        localStorage.cat_cart = {};
+console.log("{{msg}}");
+if ("{{msg}}" == "All good") {
+    localStorage.cat_cart = {{ cart_items | safe }};
+} else {
+    localStorage.cat_cart = {};
 }
+console.log(localStorage.cat_cart)
 var slideIndex = 1;
 showDivs(slideIndex);
 
@@ -148,19 +149,17 @@ if (localStorage.getItem('cat_cart') == {}) {
     var cat_cart = {};
 } else {
     cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
-} 
+}
 console.log(cat_cart);
 var sum = 0;
-for(var item in cat_cart){
+for (var item in cat_cart) {
     let qty = cat_cart[item][0];
     sum += qty;
 }
-if(sum==0){
-    document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'   
-}
-else{
+if (sum == 0) {
+    document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'
+} else {
     document.getElementById('cart').innerHTML = sum;
 }
-
 </script>
 {% endblock %}
