--- a/user/templates/user/catproducts.html
+++ b/user/templates/user/catproducts.html
@@ -1,12 +1,12 @@
-<!-- No change Required in this page. All good -->
+<!-- All Good !!! -->
 {% extends 'user/basic.html'%}
 {% load static %}
 {% block title %}Category|{{product.0.category}} Products{% endblock %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'user/catproducts.css' %}">
 <style type="text/css">
-.col img {
-    max-width: 255px;
+.card-img-top {
+    width: 255px;
     height: 220px;
 }
 
@@ -26,18 +26,33 @@
     <!-- Showing total no. of products in this category (Backend) -->
     <span>1 - {{length}} of {{length}} products</span>
     <div class="row my-3">
-        {% for i in product %}
+        {% for product,quantity,price in comb_list %}
         <div class="col-md-4">
             <div class="card align-items-center" style="width: 18rem;">
-                <img class="card-img-top" src="/media/{{i.image}}" alt="Card image cap">
+                <img class="card-img-top" src="/media/{{product.image}}" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title" id="namepr{{i.product_id}}" style="color: black;">{{i.product_name}}</h5>
-                    <p class="card-text">{{i.desc1|slice:"0:23"}}...</p>
-                    <h6>Price: <span id="pricepr{{i.product_id}}">{{i.price}}</span></h6>
-                    <span id="divpr{{i.product_id}}" class="divpr">
-                        <button id="pr{{i.product_id}}" class="btn btn-primary cart" onclick="add_cart(this)">Add to Cart</button>
+                    <h5 class="card-title" id="namepr" style="color: black;">{{product.product_name|slice:"0:25"}}..</h5>
+                    <p class="card-text">{{product.desc1|slice:"0:23"}}...</p>
+                    <h6>M.R.P: <span style="text-decoration: line-through;">₹ {{price.0}}</span></h6>
+                    <h6>Price: <span id="pricepr">₹ {{price.1}}</span></h6>
+                    <h6>You Save: <span id="pricepr">₹ {{price.2}} ({{price.3}}%)</span></h6>
+
+                    <span id="divpr" class="divpr">
+                        {% if quantity > 0 %}
+                            <a href="/user/cat/add/{{product.product_id}}">
+                                <button id="minus" class="btn btn-primary minus mr-2">+</button>  
+                            </a>
+                            {{ quantity}} 
+                             <a href="/user/cat/sub/{{product.product_id}}">
+                                <button id="plus" class="btn btn-primary minus ml-2">-</button>  
+                            </a>
+                        {% else %}
+                            <a href="/user/cat/add/{{product.product_id}}">
+                                <button id="pr" class="btn btn-primary cart">Add to Cart</button>
+                            </a>
+                        {% endif %} 
                     </span>
-                    <a href="/user/productview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary">QuickView</button></a>
+                    <a href="/user/productview/{{product.product_id}}"><button id="qv" class="btn btn-primary ml-2">QuickView</button></a>
                 </div>
             </div>
         </div>
@@ -49,80 +64,16 @@
     </div>
 </div>
 {% endblock %}
+
+
 {% block js %}
+
 <script type="text/javascript">
-// Find out the cart items from localstorage
-if (localStorage.getItem('cat_cart') == null) {
-    var cat_cart = {};
-} else {
-    cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
-    console.log(cat_cart);
-    // document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
-    updateCart(cat_cart);
-}
-
-// If the add to cart button is clicked, add/increment the item
-function add_cart(thu){
-    var idstr = thu.id.toString();
-    if (cat_cart[idstr] != undefined) {
-        qty = cat_cart[idstr][0] + 1;
-        cat_cart[idstr][0] = qty;
-    } else {
-        qty = 1;
-        name = document.getElementById('name' + idstr).innerHTML;
-        price = document.getElementById('price' + idstr).innerHTML;
-        cat_cart[idstr] = [qty, name, parseInt(price)];
+    if("{{total_item}}"==="None"){
+        document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>';
     }
-    updateCart(cat_cart);
-
-}
-
-
-function updateCart(cat_cart) {
-    if ({{ allProdid | safe }}.length == 0)
-        temp_cart = [];
-    else
-        temp_cart = {{ allProdid | safe }};
-    console.log(cat_cart);
-    let sum = 0;
-    // console.log("temp_cart",temp_cart);
-    for (var item of temp_cart) {
-        if (item in cat_cart) {
-            console.log(typeof(item));
-            document.getElementById("div" + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" +
-                cat_cart[item][0] + "</span> <button id='plus" + item + "' class= 'btn btn-primary plus'> + </button>";
-        }
+    else{
+        document.getElementById('cart').innerHTML = {{total_item}};
     }
-    for (var item in cat_cart) {
-        sum += cat_cart[item][0];
-    }
-    localStorage.setItem('cat_cart', JSON.stringify(cat_cart));
-    if (sum == 0) {
-        document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'
-    } else {
-        document.getElementById('ordu').innerHTML = 'Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">'+sum+'</span>';
-    }
-    // document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
-}
-// If plus or minus button is clicked, then change the cart as well as the display value
-$('.divpr').on("click", "button.minus", function() {
-    a = this.id.slice(7, );
-    if (cat_cart['pr' + a][0] > 0) {
-        cat_cart['pr' + a][0] -= 1;
-    }
-    if (cat_cart['pr' + a][0] == 0) {
-        document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class ="btn btn-primary cart" onclick="add_cart(this)">Add to Cart</button>';
-        delete cat_cart['pr' + a];
-    } else {
-        document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
-    }
-    updateCart(cat_cart);
-});
-$('.divpr').on("click", "button.plus", function() {
-    a = this.id.slice(6, );
-    cat_cart['pr' + a][0] += 1;
-    document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
-    updateCart(cat_cart);
-});
 </script>
 {% endblock %}
