--- a/user/templates/user/logout.html
+++ b/user/templates/user/logout.html
@@ -1,42 +1,63 @@
-{% extends 'user/basic.html'%}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Logout-Pharmacy Management System</title>
+</head>
 {% load static %}
-{% block css %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{% static 'user/checkout.css' %}">
 <style type="text/css">
-.main {
-    margin-top: 128px;
-    margin-left: 274px;
-    margin-right: 100px;
+body {
+    min-height: 100vh;
+    background: #15161d;
 }
-.msgBox{
-	margin-left: 38%;
-	margin-top: 30%;
-	height: 100px;
-	width: 300px;
-	border: solid 2px white;
+
+.msgBox {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 100px;
+    width: 300px;
+    background: rgba(37, 45, 66, 0.7);
+}
+
+.txt {
+    height: 34px;
+    background: #4360b5;
+    z-index: 5;
+    padding: 4px;
+    top: 35%;
+    left: 38.5%;
+    position: absolute;
+    width: 300px;
 }
 </style>
-{% endblock %}
-{% block body %}
-<div class="main">
-    <div class="msgBox">
-    	<center>
-        <span>Are you sure to logout??</span>
-        <form method="post" action="/user/logout/">{% csrf_token %}
-            <input type="hidden" name="itemsJson" id="itemsJson">
-            <div class="btns" style="margin-top: 10%">
-                <button class="btn btn-primary no mr-2">No</button>
-                <button type="submit" class="btn btn-primary yes ml-2">Yes</button>
-            </div>
-        </form>
-    </center>
+
+<body>
+    <div class="txt">
+        <center>Are you sure to logout ?</center>
     </div>
-</div>
-{% endblock %}
-{% block js %}
+    <div class="msgBox">
+        <center>
+            <div class="btns" style="margin-top: 10%">
+                <a href="/user"><button class="btn btn-primary no mr-2" style="margin-left: 120px">No</button></a>
+                <form method="post" action="/user/logout/">{% csrf_token %}
+                    <input type="hidden" name="itemsJson" id="itemsJson">
+                    <button type="submit" class="btn btn-primary yes ml-2" style="margin-top: -61px;margin-right: 117px;">Yes</button>
+                </form>
+            </div>
+        </center>
+    </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <script type="text/javascript">
+
 cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
 $('#itemsJson').val(JSON.stringify(cat_cart));
-localStorage.clear();
+console.log(cat_cart);
 </script>
-{% endblock %}
+
+</html>
