--- a/user/templates/user/search.html
+++ b/user/templates/user/search.html
@@ -10,21 +10,36 @@
 }
 
 .col-md-3 img {
-    max-width: 200px;
+    width: 200px;
     height: 200px;
 }
 
 body .carousel-indicator li {
-    background-color: blue;
+    background-color: white;
+    position: absolute;
+    height: 100px;
+    line-height: 100px;
+    width: 45px;
+    text-align: center;
+    box-shadow: 0 1px 3px #888;
+    user-select: none;
 }
 
 body .carousel-indicators .active {
-    background-color: blue;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 body .carousel-control-prev-icon,
 body .carousel-control-next-icon {
-    background-color: blue;
+    /*background-color: rgba(0,0,0,0.5);*/
+    border-color: rgba(37, 45, 66, 0.7);
+    position: absolute;
+    height: 100px;
+    line-height: 100px;
+    width: 45px;
+    text-align: center;
+    box-shadow: 0 1px 3px #000;
+    user-select: none;
 }
 
 .carousel-control-prev,
@@ -32,7 +47,7 @@ body .carousel-control-next-icon {
     top: auto;
     bottom: auto;
     margin-top: 170px;
-    margin-left: 150px;
+    margin-left: 180px;
 }
 
 body .no-padding {
@@ -51,11 +66,11 @@ body .no-padding {
 <div class="main">
     <div class="contain">
         <!-- Slideshow starts here -->
-        {% for product,range,nSlides in allProds %}
-        <h4 class="my-4">Flash Sale on {{product.0.category}} - Recommended Item</h4>
+        {% for comb_list,range,nSlides,cat in allProds %}
+        <h4 class="my-4">Flash Sale on {{cat}} - Recommended Item</h4>
         <div class="row">
             <div class="col carousel slide my-3" id="demo{{forloop.counter}}" data-ride="carousel">
-                <ul class="carousel-indicators">
+                <ul class="carousel-indicators" style="margin-bottom: -30px">
                     <li data-target="#demo{{forloop.counter}}" data-slide-to="0" class="active"></li>
                     {% for i in range %}
                     <li data-target="#demo{{forloop.parentloop.counter}}" data-slide-to="{{i}}"></li>
@@ -63,18 +78,33 @@ body .no-padding {
                 </ul>
                 <div class="container carousel-inner no-padding">
                     <div class="carousel-item active">
-                        {% for i in product%}
-                        <div class="col-md-3 mx-4">
-                            <div class="card align-items-center" style="width: 18rem;">
-                                <img class="card-img-top" src='/media/{{i.image}}' alt="Card image cap">
-                                <div class="card-body" style="color: black">
-                                    <h5 class="card-title" id="namepr{{i.product_id}}">{{i.product_name}}</h5>
-                                    <p class="card-text">{{i.desc1|slice:"0:23"}}...</p>
-                                    <h6>Price: <span id="pricepr{{i.product_id}}">{{i.price}}</span></h6>
-                                    <span id="divpr{{i.product_id}}" class="divpr">
-                                        <button id="pr{{i.product_id}}" class="btn btn-primary cart" onclick="add_cart(this)">Add to Cart</button>
+                        {% for product,quantity,price in comb_list%}
+                        <div class="col-md-3 mr-5 ml-4">
+                            <div class="card align-items-center" style="width: 18rem; color: black;">
+                                <img class="card-img-top" src="/media/{{product.image}}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title" id="namepr" style="color: black;">{{product.product_name|slice:"0:25"}}..</h5>
+                                    <p class="card-text">{{product.desc1|slice:"0:23"}}...</p>
+                                    <h6>M.R.P: <span style="text-decoration: line-through;">₹ {{price.0}}</span></h6>
+                                    <h6>Price: <span id="pricepr">₹ {{price.1}}</span></h6>
+                                    <h6>You Save: <span id="pricepr">₹ {{price.2}} ({{price.3}}%)</span></h6>
+
+                                    <span id="divpr" class="divpr">
+                                        {% if quantity > 0 %}
+                                        <a href="/user/search/add/{{product.product_id}}">
+                                            <button id="minus" class="btn btn-primary minus mr-2">+</button>
+                                        </a>
+                                        {{ quantity}}
+                                        <a href="/user/search/sub/{{product.product_id}}">
+                                            <button id="plus" class="btn btn-primary minus ml-2">-</button>
+                                        </a>
+                                        {% else %}
+                                        <a href="/user/search/add/{{product.product_id}}">
+                                            <button id="pr" class="btn btn-primary cart">Add to Cart</button>
+                                        </a>
+                                        {% endif %}
                                     </span>
-                                    <a href="/user/productview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary">QuickView</button></a>
+                                    <a href="/user/productview/{{product.product_id}}"><button id="qv" class="btn btn-primary ml-2">QuickView</button></a>
                                 </div>
                             </div>
                         </div>
@@ -90,7 +120,7 @@ body .no-padding {
                 <span class="carousel-control-prev-icon"></span>
             </a>
             <a href="#demo{{forloop.counter}}" class="carousel-control-next" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
+                <span class="carousel-control-next-icon" style="margin-left: 29px"></span>
             </a>
         </div>
         {% endfor %}
@@ -99,83 +129,16 @@ body .no-padding {
 {% endblock %}
 {% block js %}
 <script type="text/javascript">
-str = "{{msg}}";
-if (str !== "success") {
-    alert("{{msg}}");
-    window.location.href = "/user";
-} else {
-    // Find out the cart items from localstorage
-    if (localStorage.getItem('cat_cart') == null) {
-        var cat_cart = {};
-    } else {
-        cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
-        console.log(cat_cart);
-        updateCart(cat_cart);
+    str = "{{msg}}";
+    if (str !== "success") {
+        alert("{{msg}}");
+        window.location.href = "/user";
     }
-
-    // If the add to cart button is clicked, add/increment the item
-    function add_cart(thu){
-        var idstr = thu.id.toString();
-        if (cat_cart[idstr] != undefined) {
-            qty = cat_cart[idstr][0] + 1;
-            cat_cart[idstr][0] = qty;
-        } else {
-            qty = 1;
-            name = document.getElementById('name' + idstr).innerHTML;
-            price = document.getElementById('price' + idstr).innerHTML;
-            cat_cart[idstr] = [qty, name, parseInt(price)];
-        }
-        updateCart(cat_cart);
+    if("{{total_item}}"===0){
+         document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>';
     }
-
-
-
-    function updateCart(cat_cart) {
-        if ({{ allProdid | safe }}.length == 0)
-            temp_cart = [];
-        else
-            temp_cart = {{ allProdid | safe }};
-        console.log(cat_cart);
-        let sum = 0;
-        // console.log("temp_cart",temp_cart);
-        for (var item of temp_cart) {
-            if (item in cat_cart) {
-                console.log(typeof(item));
-                document.getElementById("div" + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" +
-                    cat_cart[item][0] + "</span> <button id='plus" + item + "' class= 'btn btn-primary plus'> + </button>";
-            }
-        }
-        for (var item in cat_cart) {
-            sum += cat_cart[item][0];
-        }
-        localStorage.setItem('cat_cart', JSON.stringify(cat_cart));
-        if (sum == 0) {
-            document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'
-        } else {
-            document.getElementById('ordu').innerHTML = 'Orders <span id="cart" style="margin-left: 8px;border-radius: 50%;padding: 1.5px 7px;background: #3b4cad;">'+sum+'</span>';
-        }
-        // document.getElementById('cart').innerHTML = Object.keys(cat_cart).length;
+    else{
+        document.getElementById('cart').innerHTML = {{total_item}};
     }
-    // If plus or minus button is clicked, then change the cart as well as the display value
-    $('.divpr').on("click", "button.minus", function() {
-        a = this.id.slice(7, );
-        if (cat_cart['pr' + a][0] > 0) {
-            cat_cart['pr' + a][0] -= 1;
-        }
-        if (cat_cart['pr' + a][0] == 0) {
-            document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class ="btn btn-primary cart" onclick="add_cart(this)">Add to Cart</button>';
-            delete cat_cart['pr' + a];
-        } else {
-            document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
-        }
-        updateCart(cat_cart);
-    });
-    $('.divpr').on("click", "button.plus", function() {
-        a = this.id.slice(6, );
-        cat_cart['pr' + a][0] += 1;
-        document.getElementById('valpr' + a).innerHTML = cat_cart['pr' + a][0];
-        updateCart(cat_cart);
-    });
-}
 </script>
 {% endblock %}
