--- a/user/templates/user/tracker.html
+++ b/user/templates/user/tracker.html
@@ -52,6 +52,13 @@ body {
 {% block js %}
 <script type="text/javascript">
 $("#tr").addClass("active");
+console.log("Hello");
+if("{{total_item}}"==="None"){
+        document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>';
+    }
+    else{
+        document.getElementById('cart').innerHTML = {{total_item}};
+    }
 $('#trackerForm').submit(function(event) {
 
     $('.items').empty();
@@ -68,9 +75,9 @@ $('#trackerForm').submit(function(event) {
         })
         .done(function(data) {
             $('.citems').empty();
-            console.log(data);
-            data = JSON.parse(data);
             if (data['status'] == "success") {
+                data = JSON.parse(data);
+                console.log("Heello");
                 updates = data['updates'];
                 for (i = 0; i < updates.length; i++) {
                     let text = updates[i]['text'];
@@ -80,9 +87,8 @@ $('#trackerForm').submit(function(event) {
                 }
                 cat_cart = JSON.parse(data['itemsJson']);
                 for (item in cat_cart) {
-                    let name = cat_cart[item][1];
-                    let qty = cat_cart[item][0];
-                    console.log(name, qty);
+                    let name = item; 
+                    let qty = cat_cart[name];
                     mystr = `<li class="list-group-item d-flex justify-content-between align-items-center">${name}<span class="badge badge-primary badge-pill">${qty}</span></li>`;
                     $('.citems').append(mystr);
                 }
@@ -97,22 +103,7 @@ $('#trackerForm').submit(function(event) {
         });
     event.preventDefault();
 });
-//Displaying total items in cart 
-if (localStorage.getItem('cat_cart') == {}) {
-    var cat_cart = {};
-} else {
-    cat_cart = JSON.parse(localStorage.getItem('cat_cart'));
-} 
-var sum = 0;
-for (var item in cat_cart) {
-    let qty = cat_cart[item][0];
-    sum += qty;
-}
-if(sum==0){
-    document.getElementById('ordu').innerHTML = 'Orders <span id="cart"></span>'   
-}
-else{
-    document.getElementById('cart').innerHTML = sum;
-}
-</script>
+//Displaying total items in cart
+</script> 
 {% endblock %}
+
